feat: complete app hardening with authentication flows, validation, and session-aware polling
- Add Cognito email-based authentication flows (forgot password, reset password, resend code)
- Implement forgot-password and reset-password pages with email verification
- Add authentication API routes for email-based password recovery
- Extend cognito.ts with forgotPassword, confirmForgotPassword, and resendConfirmationCode functions
- Activate middleware.ts for protected route handling
- Implement validation utility with email and password validation rules
- Add token refresh mechanism and token lifecycle management
- Update EventController with event stream SSE endpoints and event retrieval
- Implement subscription registry and SseEmitterService for real-time event broadcasting
- Add FixtureController with per-game fixture selection and filtering
- Implement season-aware filtering in Producer to reduce API-Sports quota consumption
- Add session-aware polling that adjusts request rates based on active subscriptions
- Update PollingService to respect active subscriptions and pause when idle
- Add health check endpoints for Producer and API services
- Implement GlobalExceptionHandler with standardized error responses
- Update SummaryDto and SummaryService for event aggregation
- Update DynamoDB Terraform module for production-ready configuration
- Add comprehensive test coverage and CI/CD hardening
- Include Kiro specification files for app completion tracking